Fixed footer error using z-index set to auto.

--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,9 @@ border-style: dotted;}
 
 body {
         font-family: Arial, Helvetica, sans-serif;
-        color: gold;
+        color: #3200cc;
         text-align: center;
-        text-transform: uppercase;
+        text-transform: capitalize;
     }
     .whisky-glass{
         width: 50%;
@@ -78,14 +78,17 @@ footer{
     padding: 1px;
 	text-align: center;
     width: 100%;
-    position: fixed;
+    position: relative;
     bottom: 0;
     right: 0;
-    margin-top: 1px;}
+    margin-top: 1px;
+    background-color: whitesmoke;
+    z-index: auto;
+}
     
     .drink-aware {
         font-size: large;
-        color: greenyellow;
+        color: red;
         text-transform: capitalize;
     }
 
